edited some css for logo and adjusted wording for edu & skills

--- a/work/edu.html
+++ b/work/edu.html
@@ -117,12 +117,12 @@
                 <br></br>
                 <strong>college.</strong>
                 <br></br>
-                aug 2019 - expected may 2023
+                aug 2019 - may 2023
                 <br></br>
-                I am currently attending the University of Colorado at Boulder in the College of Engineering &
-                Applied Sciences and am working towards a B.S. in Creative Technology & Design. I am
+                Attended the University of Colorado at Boulder in the College of Engineering &
+                Applied Sciences and earned a B.S. in Creative Technology & Design. Was
                 involved in the Global Engineering Residential
-                Academic Program, CU Women in Computing and am a part-time student worker.
+                Academic Program, CU Women in Computing and a part-time student worker.
                 <br></br>
                 <br></br>
                 <strong>relevant courses.</strong>
@@ -195,6 +195,16 @@
                             <li>Software Development Methods and Tools</li>
                         </ul>
                     </div>
+                    <div class = "three columns 3d art ani">
+                        [ spring 2023 ]
+                        <br></br>
+
+                        <ul class = "starlist">
+                            <li>Object Oriented Analysis and Design</li>
+                            <li>Intensive Programming Workshop</li>
+                            <li>Big Data Architecture</li>
+                        </ul>
+                    </div>
                 </div>
                 <br></br>
                 <strong>skills.</strong>
@@ -207,6 +217,8 @@
                             <li>HTML/CSS/JavaScript</li>
                             <li>React</li>
                             <li>TypeScript</li>
+                            <li>Java</li>
+                            <li>Qt Creator</li>
                         </div>
                         <div class=" column">
                             <li>Digital Design & Figma Prototyping</li>
@@ -214,6 +226,7 @@
                             <li>Kotlin</li>
                             <li>C#</li>
                             <li>Bootstrap</li>
+                            <li>EJS</li>
                         </div>
                 </ul>
             </div>
