--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="work-middle">
                 Welcome
             </div>
-            <img class="centerimg" src="Images/coffee-shop.JPEG"></img>
+            <img class="centerimg" src="Images/prof-pic.png"></img>
         </div>
 
 
