--- a/work/fun.html
+++ b/work/fun.html
@@ -101,7 +101,7 @@
 
 
         <div class="animate__animated animate__fadeIn">
-            <img class="centerimg" src="../Images/kaitlyn-in-sf.JPG"></img>
+            <img class="centerimg" src="../Images/asakusa.JPEG"></img>
         </div>
 
         <br></br>
@@ -116,9 +116,8 @@
             <br></br>
             I love to travel as well. I have been fortunate to be able to travel to Asian countries like Japan, Vietnam,
             and Hong Kong several of times with my family. Those experiences have made me fall in love with immersing
-            myself in new cultures. After the pandemic, I definitely have a new appreciation for travelling and can't
-            wait
-            for things to start getting back to normal so that I can visit these places again! My love for travelling
+            myself in new cultures. After the pandemic, I definitely have a new appreciation for travelling and have been fortunate
+            enough to be able to visit Japan again recently! My love for travelling
             has led to my
             love in learning languages. With Cantonese as my native tounge and learning Japanese in high school and
             college, I'm always studying
