updated domain name, plz work

--- a/work/playlist.html
+++ b/work/playlist.html
@@ -111,19 +111,30 @@
                         <br></br>
                         <ul class="starlist">
                             <li>kaitlyn huynh</li>
+                            <li>ryan montelone</li>
+                            <li>anne chen</li>
+                            <li>ashwath ramakrishnan</li>
+                            <li>lola keychenko</li>
+                            <li>vastal verma</li>
                         </ul>
 
                         <strong>technology.</strong>
                         <br></br>
                         <ul class="starlist">
-                            <li>Swift</li>
-                            <li>Xcode</li>
+                            <li>Spotify API</li>
+                            <li>Python</li>
+                            <li>MongoDB</li>
+                            <li>Node JS</li>
+                            <li>React</li>
+                            <li>Axios</li>
+                            <li>Streamlit</li>
                         </ul>
                         <strong>description.</strong>
                         <br></br>
-                        <p>A mobile app based off of the popular game Genshin Impact that teaches users about different
-                            characters in the game through a serieis of features. Click through an image gallery, listen
-                            to voice clips and play quiz games to learn more about characters in the game!</p>
+                        <p>An online application that recommends users music based off of emotions detected through facial and voice 
+                            recognition. Try out different emotions and if you're not in the mood, tell the application how you're feeling 
+                            and Playlist Genie will give a playlist including songs that match the given mood!
+                        </p>
 
                         <strong>implementation.</strong>
                         <br></br>
