--- a/work/projects.html
+++ b/work/projects.html
@@ -128,7 +128,7 @@
                     </div>
                     <div class="row">
                         <div class="four columns 3d art ani">
-                            <a href="app.html"><img src="../Images/playlistgenie.gif" class="project-img" /></a>
+                            <a href="playlist.html"><img src="../Images/playlistgenie.gif" class="project-img" /></a>
                             <p class="work-thumb">Playlist Genie</p>
                         </div>
                         <div class="four columns 3d art ani">
