finished up playlist genie page

--- a/work/playlist.html
+++ b/work/playlist.html
@@ -147,15 +147,25 @@
                         <strong>what i learned.</strong>
                         <br></br>
                         <ul class="starlist">
-                            <li>improved debugging and programming skills in swift</li>
-                            <li>more practice with Xcode interface</li>
+                            <li>more practice working in an agile environment with 2 week sprints</li>
+                            <li>how to collaborate with others on a full-stack application</li>
                             <li>using github for version control</li>
-                            <li>working with constraints and responsive design in Xcode</li>
+                            <li>connecting back-end and front-end with multiple moving parts (back-end->front-end<-machine learning)</li>
+                            <li>different components of front-end (axios, api, react, node.js)</li>
+                            <li>better understanding of back-end architecture and how to connect it to a live application</li>
+                            <li>deploying applications in the cloud (ex: using streamlit to deploy and manage our application)</li>
+
                         </ul>
-                        <a
-                        href="https://band-spinach-192.notion.site/4a6eb4ea78fa4ce0be1831f7ea8c42ad?v=90bb09888dd047469335633242b86fc5">&rarr;
-                        check out my documentation throughout the process</a>
-                        <strong>demo.</strong>
+                        <div class = "videos">
+                            <div>
+                                <p style="font-weight: bold;">Watch this video for a demonstration!</p>
+                                <iframe width="500" height="315" src="https://www.youtube.com/embed/14nXemckxMw?si=_E1cRe9KzUoChh7T" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            </div>
+                            <div>
+                                <p style = "font-weight: bold;">Watch this video for an in-depth presentation!</p>
+                                <iframe width="500" height="315" src="https://www.youtube.com/embed/So8TTBT2OIM?si=I5mf3fXmbycYUr67" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            </div>
+                        </div>
                     </div>
 
                     <br></br>
