updated the lavajava page

--- a/work/lavajava.html
+++ b/work/lavajava.html
@@ -101,7 +101,7 @@
             <div class="container">
 
                 <div class="typewriter">
-                    <h4 class="work-middle"><strong>Genshin Viewer.</strong></h4>
+                    <h4 class="work-middle"><strong>Lava Java.</strong></h4>
                 </div>
 
                 <div class="animate__animated animate__fadeIn">
@@ -111,41 +111,64 @@
                         <br></br>
                         <ul class="starlist">
                             <li>kaitlyn huynh</li>
+                            <li>jeffery mitchell</li>
                         </ul>
 
                         <strong>technology.</strong>
                         <br></br>
                         <ul class="starlist">
-                            <li>Swift</li>
-                            <li>Xcode</li>
+                            <li>Java</li>
+                            <li>Python</li>
+                            <li>LibGDX</li>
+                            <li>Android Studio</li>
+                            <li>Figma</li>
+                            <li>Procreate</li>
                         </ul>
                         <strong>description.</strong>
                         <br></br>
-                        <p>A mobile app based off of the popular game Genshin Impact that teaches users about different
-                            characters in the game through a serieis of features. Click through an image gallery, listen
-                            to voice clips and play quiz games to learn more about characters in the game!</p>
+                        <p>You play as a barista in Lava Java, a popular coffee shop in the neighborhood! As a barista, you take orders from animal customers as they
+                            walk into the shop. Customers can order a variety of drinks in their order (lattes, tea and matcha). Different combinations of ingredients 
+                            and a timer are guaranteed to give players a new order to build each time as they race against time to satisfy the customer. Progress is tracked
+                            via points which are rewarded by how quickly the player can finish the order. As you serve more customers, the drink orders spike up in difficulty
+                            so stay on top of the game!
+                        </p>
 
                         <strong>implementation.</strong>
                         <br></br>
-                        <p>Initially designed mockup in and carried over assets from Figma to use in the final product.
-                            Using elements provided in Xcode and knowledge of Swift, I created functionality for
-                            selecting between characters, a quiz game, scrolling through an image gallery, and playing
-                            voice clips in 3 different languages. The user can click through these different tabs via
-                            the window selection on the bottom of the screen for seamless transition. </p>
+                        <p>Since we were creating a game, a lot of planning had to be put into this project. Ultimately it was divided into these portions: Use cases, UML, 
+                            UX, Scope and Architecture. Over the course of 2 weeks, we created various diagrams to see how different components of the application would interact
+                            with each other and drew up mockups for a better visual representation of what we inteded the final product to look like and how the user would 
+                            interact in the actual gameplay. Click <a href = "https://band-spinach-192.notion.site/object-oriented-analysis-and-design-cce4616ff9cd493aa3823072ab045d62" style="color: #5b7c99;">here</a> 
+                            to view some of our early and final stage documentation of our project. Using Android Studio as our main IDE and LibGDX as our framework, we both worked together to
+                            create Lava Java completely from scratch. Jeffery mainly handled the techincal portion while I helped in hand-creating the assets for the game. All assets in the game
+                            were created by me in Procreate using a pixel pen. With collaboration and communication between the 2 of us, we were able to import these assets into Android Studio and 
+                            make it fully interactable and functional in the game.
+                        </p>
+
+                        <strong>reflection.</strong>
+                        <br></br>
+                        <p>Despite being a final project for a class, this project is foremost a project of passion. The requirements for this project were very VERY open ended:
+                            create something that can be coded using Java. While at first our initial plan was to just have a simple cafe game that would be text based, we took it a
+                            step further and decided to create a mobile app (with only some past experience in Android Studio and none with LibGDX!) with 100% handmade assets. This project
+                            allowed me to explore a different side of my skillset and develop skills that I normally don't get to focus on a daily basis. Being able to play a game where everything
+                            - from the code to the visuals - was 100% created by our team was such a great feeling and has further sparked my passion in creating projects no matter how small or big.
+                        </p>
 
                         <strong>what i learned.</strong>
                         <br></br>
                         <ul class="starlist">
-                            <li>improved debugging and programming skills in swift</li>
-                            <li>more practice with Xcode interface</li>
-                            <li>using github for version control</li>
-                            <li>working with constraints and responsive design in Xcode</li>
+                            <li>improved debugging and programming skills in java</li>
+                            <li>more practice with Android Studio interface</li>
+                            <li>creating my own assets from scratch with Procreate</li>
+                            <li>bringing those assets into a usable and interactable state into Android Studio</li>
+                            <li>adjusting assets to be compatible with a mobile application</li>
+                            <li>collaborating with a partner remotely during a large scale project</li>
+                            <li>how to incorporate LibGDX with Java 8</li>
+                            <li>implementing different OOAD patterns such as Singleton, Flyweight, MVC, Decorator, Factory and Mediator</li>
                         </ul>
-                        <a
-                        href="https://band-spinach-192.notion.site/4a6eb4ea78fa4ce0be1831f7ea8c42ad?v=90bb09888dd047469335633242b86fc5">&rarr;
-                        check out my documentation throughout the process</a>
-                        <strong>demo.</strong>
                     </div>
+                    <p style="font-weight: bold;">Watch this video for a demonstration!</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/I6F5xxk_xS8?si=PHjCBG2FnqRrkm3z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
                     <br></br>
                     <br></br>
@@ -153,16 +176,18 @@
                 </div>
 
 
-                <a href="projects.html">
-                    <p class="work-middle">&larr; other projects</p>
-                </a>
-                <a href="https://github.com/kaitlynh770/KaitlynHuynh_MAD/tree/main/Project1-backup%20copy">
-                    <div class="row">
-                        <div class="full columns">
-                            <p class="work-thumb">Project on GitHub &rarr;</p>
+                <div class = "project-bottom">
+                    <a href="projects.html">
+                        <p class="work-middle">&larr; other projects</p>
+                    </a>
+                    <a href="https://github.com/JeffreyDMitchell/LavaJava">
+                        <div class="row">
+                            <div class="full columns">
+                                <p class="project-github-link">Project on GitHub &rarr;</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
 
                 <div class="smallimg">
