created plastifashion page and have filled in most of the information

--- a/work/projects.html
+++ b/work/projects.html
@@ -136,6 +136,12 @@
                             <p class="work-thumb">Lava Java</p>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="four columns 3d art ani">
+                            <a href="plastifashion.html"><img src="../Images/plastifashion.gif" class="project-img" /></a>
+                            <p class="work-thumb">Plastifashion</p>
+                        </div>
+                    </div>
                     <a href="https://github.com/kaitlynh770">
                         <div class="row" >
                             <div class="full columns">
