finished plastifashion page

--- a/work/plastifashion.html
+++ b/work/plastifashion.html
@@ -142,31 +142,32 @@
                             all elements would use 'em' or 'vw' as a unit and made everything work with flex). I also decided to use GSAP for seamless transitions (primarily seen in the process page) since I wanted extra practice for incorporating different libraries into a React app 
                             and thought that it would make information more easy to digest.
                         </p>
+                        <a href = "http://kaitlynhuynh.me/capstone/"><img src = "../Images/plastifashion-website.png" width = "2.3vw"></a>
 
                         <strong>reflection.</strong>
                         <br></br>
-                        <p>Despite being a final project for a class, this project is foremost a project of passion. The requirements for this project were very VERY open ended:
-                            create something that can be coded using Java. While at first our initial plan was to just have a simple cafe game that would be text based, we took it a
-                            step further and decided to create a mobile app (with only some past experience in Android Studio and none with LibGDX!) with 100% handmade assets. This project
-                            allowed me to explore a different side of my skillset and develop skills that I normally don't get to focus on a daily basis. Being able to play a game where everything
-                            - from the code to the visuals - was 100% created by our team was such a great feeling and has further sparked my passion in creating projects no matter how small or big.
+                        <p>
+                            As my final project of my college career, this was an especially refreshing project that I've gotten to work on during the past 4 years I spent here. As I've buried myself in primarily software based projects during my time here, I 
+                            wanted my capstone project to be something that I've never explored before, something outside of my comfort zone. When I heard that there was a group focused on material design that needed a front-end expert, I jumped on that opportunity
+                            as soon as I could! Being able to coordinate all aspects of the technical portion of this project while also being a part of the material creation process was something that I could only experience once in my life. Being able to show off my 
+                            own skillset while working on something that I've never experienced in my 4 years at CU Boulder was something I'm truly grateful to have gotten the chance to do! Being chosen as a featured project and being considered for presenting this reasearch 
+                            at a conference was a great honor and will forever be a project that I take pride in being a part of. 
                         </p>
 
                         <strong>what i learned.</strong>
                         <br></br>
                         <ul class="starlist">
-                            <li>improved debugging and programming skills in java</li>
-                            <li>more practice with Android Studio interface</li>
-                            <li>creating my own assets from scratch with Procreate</li>
-                            <li>bringing those assets into a usable and interactable state into Android Studio</li>
-                            <li>adjusting assets to be compatible with a mobile application</li>
-                            <li>collaborating with a partner remotely during a large scale project</li>
-                            <li>how to incorporate LibGDX with Java 8</li>
-                            <li>implementing different OOAD patterns such as Singleton, Flyweight, MVC, Decorator, Factory and Mediator</li>
+                            <li>improved understanding and skills with React</li>
+                            <li>how to build an accessible and entertaining website by collaborating with industry professionals</li>
+                            <li>the process of creating your own fabric from scratch</li>
+                            <li>using background knowledge to create our own process of building a fabric from scratch</li>
+                            <li>implementing libraries with a React application (GSAP)</li>
+                            <li>creating a React application that will work on both mobile and desktop screens</li>
                         </ul>
                     </div>
-                    <p style="font-weight: bold;">Watch this video for a demonstration!</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/I6F5xxk_xS8?si=PHjCBG2FnqRrkm3z" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <p style="font-weight: bold;">Watch this video to see what Plastifashion is!</p>
+                    <iframe src="https://player.vimeo.com/video/821011118?h=5517b1dded" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/821011118"></a>
 
                     <br></br>
                     <br></br>
@@ -178,7 +179,7 @@
                     <a href="projects.html">
                         <p class="work-middle">&larr; other projects</p>
                     </a>
-                    <a href="https://github.com/JeffreyDMitchell/LavaJava">
+                    <a href="https://github.com/kaitlynh770/capstone">
                         <div class="row">
                             <div class="full columns">
                                 <p class="project-github-link">Project on GitHub &rarr;</p>
