--- a/work/weatherWardrobe.html
+++ b/work/weatherWardrobe.html
@@ -149,16 +149,18 @@
                     <br></br>
                 </div>
 
-                <a href="projects.html">
-                    <p class="work-middle">&larr; other projects</p>
-                </a>
-                <a href="https://github.com/kaitlynh770/WonderfulWardrobe-React">
-                    <div class="row">
-                        <div class="full columns">
-                            <p class="work-thumb">Project on GitHub &rarr;</p>
+                <div class = "project-bottom">
+                    <a href="projects.html">
+                        <p class="work-middle">&larr; other projects</p>
+                    </a>
+                    <a href="https://github.com/kaitlynh770/WonderfulWardrobe-React">
+                        <div class="row">
+                            <div class="full columns">
+                                <p class="project-github-link">Project on GitHub &rarr;</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
 
                 <div class="smallimg">
