minor changes + spacing changes

--- a/work/app.html
+++ b/work/app.html
@@ -127,7 +127,7 @@
 
                         <strong>implementation.</strong>
                         <br></br>
-                        <p>Initially designed mockup in and carried over assets from Figma to use in the final product.
+                        <p>Initially designed <a href = "https://www.figma.com/file/96wS2UkJGeSeUDVh5SZfff/Project-2-Milestone-MAD?type=design&node-id=0%3A1&mode=design&t=bFaemOONn9nSj0fU-1"style="color: #5b7c99;">mockup</a> in and carried over assets from Figma to use in the final product.
                             Using elements provided in Xcode and knowledge of Swift, I created functionality for
                             selecting between characters, a quiz game, scrolling through an image gallery, and playing
                             voice clips in 3 different languages. The user can click through these different tabs via
@@ -144,7 +144,6 @@
                         <a
                         href="https://band-spinach-192.notion.site/4a6eb4ea78fa4ce0be1831f7ea8c42ad?v=90bb09888dd047469335633242b86fc5">&rarr;
                         check out my documentation throughout the process</a>
-                        <strong>demo.</strong>
                     </div>
 
                     <br></br>
@@ -153,16 +152,18 @@
                 </div>
 
 
-                <a href="projects.html">
-                    <p class="work-middle">&larr; other projects</p>
-                </a>
-                <a href="https://github.com/kaitlynh770/KaitlynHuynh_MAD/tree/main/Project1-backup%20copy">
-                    <div class="row">
-                        <div class="full columns">
-                            <p class="work-thumb">Project on GitHub &rarr;</p>
+                <div class = "project-bottom">
+                    <a href="projects.html">
+                        <p class="work-middle">&larr; other projects</p>
+                    </a>
+                    <a href="https://github.com/kaitlynh770/KaitlynHuynh_MAD/tree/main/Project1-backup%20copy">
+                        <div class="row">
+                            <div class="full columns">
+                                <p class="project-github-link">Project on GitHub &rarr;</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
 
                 <div class="smallimg">
