--- a/work/villageviewer.html
+++ b/work/villageviewer.html
@@ -10,7 +10,7 @@
     <!-- Basic Page Needs
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Kaitly Huynh / Portfolio</title>
+    <title>Kaitlyn Huynh / Portfolio</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -158,17 +158,18 @@
                     <br></br>
                 </div>
 
-
-                <a href="projects.html">
-                    <p class="work-middle">&larr; other projects</p>
-                </a>
-                <a href="https://github.com/kaitlynh770/KaitlynHuynh_MAD/tree/main/Project2-VillagerPlanner">
-                    <div class="row">
-                        <div class="full columns">
-                            <p class="work-thumb">Project on GitHub &rarr;</p>
+                <div class = "project-bottom">
+                    <a href="projects.html">
+                        <p class="work-middle">&larr; other projects</p>
+                    </a>
+                    <a href="https://github.com/kaitlynh770/KaitlynHuynh_MAD/tree/main/Project2-VillagerPlanner">
+                        <div class="row">
+                            <div class="full columns">
+                                <p class="project-github-link">Project on GitHub &rarr;</p>
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
+                </div>
 
 
                 <div class="smallimg">
