visual changes to playlist genie project page

--- a/work/playlist.html
+++ b/work/playlist.html
@@ -64,7 +64,7 @@
         </ul>
     </div>
 
-    <div class="header_about6 container_header">
+    <div class="header_about6 container_header" style = "background-color: #ecf3e6">
 
         <div class="container work-index">
             <div class="row">
@@ -187,8 +187,8 @@
                 </div>
 
 
-                <div class="smallimg">
-                    <img src="../Images/threestars.gif" />
+                <div class="smallmedimg">
+                    <img src="../Images/hana.gif" />
                 </div>
                 <br></br>
                 <div class="row" id="superfooter">
