changed visuals for lavajava page

--- a/work/lavajava.html
+++ b/work/lavajava.html
@@ -64,7 +64,7 @@
         </ul>
     </div>
 
-    <div class="header_about6 container_header">
+    <div class="header_about6 container_header" style = "background-color: #FCFCF6">
 
         <div class="container work-index">
             <div class="row">
@@ -191,7 +191,7 @@
 
 
                 <div class="smallimg">
-                    <img src="../Images/threestars.gif" />
+                    <img src="../Images/sakura.gif" />
                 </div>
                 <br></br>
                 <div class="row" id="superfooter">
