changed visuals for plastifashion page

--- a/work/plastifashion.html
+++ b/work/plastifashion.html
@@ -64,7 +64,7 @@
         </ul>
     </div>
 
-    <div class="header_about6 container_header">
+    <div class="header_about6 container_header" style = "background-color: #DBDBDB;">
 
         <div class="container work-index">
             <div class="row">
@@ -190,7 +190,7 @@
 
 
                 <div class="smallimg">
-                    <img src="../Images/threestars.gif" />
+                    <img src="../Images/white-flowers.gif" />
                 </div>
                 <br></br>
                 <div class="row" id="superfooter">
