updating link to www project

--- a/work/weatherWardrobe.html
+++ b/work/weatherWardrobe.html
@@ -142,7 +142,7 @@
                             href="https://band-spinach-192.notion.site/d2b84d6cdf6548468d38e195cd34137e?v=c1ab5e2828d64a2c9479ae112f101cba">&rarr;
                             check out my documentation throughout the process</a>
                         <a
-                            href='https://creative.colorado.edu/~kahu1074/front-end-development/Project2/Project2-Final/'>
+                            href='http://kaitlynhuynh.me/WonderfulWardrobe-React/'>
                             <img src="../Images/wonderfulwardrobe.png" width="2.3vw" /></a>
                     </div>
 
