updating link to desserts project

--- a/work/dessert.html
+++ b/work/dessert.html
@@ -154,7 +154,7 @@
 
                         <strong>demo.</strong>
                         <div class="medimg">
-                            <a href= 'https://creative.colorado.edu/~kahu1074/front-end-development/Project%201/project1.html'><img src="../Images/desserts.png"></a>
+                            <a href= 'http://kaitlynhuynh.me/desserts/'><img src="../Images/desserts.png"></a>
                         </div>
                     </div>
                 </div>
