--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
         <div class="work-index">
             <strong>About Me.</strong>
             <br></br>
-            Hello! My name is Kaitlyn Huynh. I'm currently a senior in the Creative Technology & Design program
-            (formerly known as Technology, Arts & Media AKA TAM). I was born in Aurora, Colorado and have lived here
-            ever since. I am an INFJ type, which is known as the Advocates type. INFJ stands for Introvert, Intuitive,
+            Hello! My name is Kaitlyn Huynh. I'm working as an Advanced Application Engineering Analyst for Accenture. I graduated from CU Boulder with a degree in Creative, Technology & Design from the School of Engineering.
+            I was born in Aurora, Colorado and have lived here ever since. 
+            I am an INFJ type, which is known as the Advocates type. INFJ stands for Introvert, Intuitive,
             Feeling and Judging. People with my personality type often strive to do the right thing and choose to focus
             on teamwork and cooperation. Their strength lies in communication and becauase of that, they're able to form
             strong and lasting relationships with others. I hope that this little introduction has given you some
