I misspelled Denver lol

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="work-index">
             <strong>About Me.</strong>
             <br></br>
-            Hello! My name is Kaitlyn Huynh. I'm currently working as an Advanced Application Engineering Analyst for Accenture in Denvor, CO! I graduated from CU Boulder with a degree in Creative, Technology & Design from the School of Engineering.
+            Hello! My name is Kaitlyn Huynh. I'm currently working as an Advanced Application Engineering Analyst for Accenture in Denver, CO! I graduated from CU Boulder with a degree in Creative, Technology & Design from the School of Engineering.
             I was born in Aurora, Colorado and have lived here ever since. 
             I am an INFJ type, which is known as the Advocates type. INFJ stands for Introvert, Intuitive,
             Feeling and Judging. People with my personality type often strive to do the right thing and choose to focus
