updated description of playlist genie

--- a/work/playlist.html
+++ b/work/playlist.html
@@ -138,12 +138,11 @@
 
                         <strong>implementation.</strong>
                         <br></br>
-                        <p>Initially designed mockup in and carried over assets from Figma to use in the final product.
-                            Using elements provided in Xcode and knowledge of Swift, I created functionality for
-                            selecting between characters, a quiz game, scrolling through an image gallery, and playing
-                            voice clips in 3 different languages. The user can click through these different tabs via
-                            the window selection on the bottom of the screen for seamless transition. </p>
-
+                        <p>Started by designing the initial mockup in Figma and carried over key assets into the final product. 
+                            Using React, we built the front-end based on the finalized Figma prototype and collaborated with the team to integrate the front-end, back-end, 
+                            and machine learning components. To connect the front-end with the ML portion, we used Streamlit—a Python-based web framework—which allowed us to 
+                            trigger the ML component and avoid network or permission issues. The Spotify API was used to access playlists already set up in the back-end, 
+                            and Axios enabled communication between the React app and the server by sending emotion-detection requests via webcam or mic and updating the app based on the response.
                         <strong>what i learned.</strong>
                         <br></br>
                         <ul class="starlist">
