--- a/work/playlist.html
+++ b/work/playlist.html
@@ -178,7 +178,7 @@
                     <a href="projects.html">
                         <p class="work-middle">&larr; other projects</p>
                     </a>
-                    <a href="https://github.com/kaitlynh770/KaitlynHuynh_MAD/tree/main/Project1-backup%20copy">
+                    <a href="https://github.com/BigDataATLS4214/BigData">
                         <div class="row">
                             <div class="full columns">
                                 <p class="project-github-link">Project on GitHub &rarr;</p>
