--- a/work/lavajava.html
+++ b/work/lavajava.html
@@ -140,7 +140,7 @@
                             with each other and drew up mockups for a better visual representation of what we inteded the final product to look like and how the user would 
                             interact in the actual gameplay. Click <a href = "https://band-spinach-192.notion.site/object-oriented-analysis-and-design-cce4616ff9cd493aa3823072ab045d62" style="color: #5b7c99;">here</a> 
                             to view some of our early and final stage documentation of our project. Using Android Studio as our main IDE and LibGDX as our framework, we both worked together to
-                            create Lava Java completely from scratch. Jeffery mainly handled the techincal portion while I helped in hand-creating the assets for the game. All assets in the game
+                            create Lava Java completely from scratch. Jeffery mainly handled the technical portion while I helped in hand-creating the assets for the game. All assets in the game
                             were created by me in Procreate using a pixel pen. With collaboration and communication between the 2 of us, we were able to import these assets into Android Studio and 
                             make it fully interactable and functional in the game.
                         </p>
